Update Task7_Stock Market Prediction using Numerical and Textual Analysis.ipynb

--- a/Data Science & Business Analytics Tasks/Task7_Stock Market Prediction using Numerical and Textual Analysis.ipynb
+++ b/Data Science & Business Analytics Tasks/Task7_Stock Market Prediction using Numerical and Textual Analysis.ipynb
@@ -2706,7 +2706,7 @@
     ">**LGBMRegressor Model** is 0.0007688320896342009 <br>\n",
     ">**AdaBoostRegressor Model** is 0.0007676971314068422\n",
     "\n",
-    "It shows ***LGBMRegressor Model***  shows a better performance than the others."
+    "It shows ***AdaBoostRegressor Model***  shows a better performance than the others."
    ]
   },
   {
